<resources>
    <string name="app_name">Mr. Market</string>
    <string name="select_a_category">Select a Category:</string>
    <string name="electronic_devices">Electronic Devices</string>
    <string name="wearables">Wearables</string>
    <string name="books">Books</string>
    <string name="others">Others</string>
    <string name="name">%s</string>
    <string name="old_price">₹%s</string>
    <string name="new_price">₹%s</string>
    <string name="discount">%s\%% off</string>
    <string name="card_name">Card Name: %s</string>
    <string name="specifications">%s</string>
    <string name="buy">Buy</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="total_amount">Total Amount :</string>
    <string name="free">Free</string>
    <string name="delivery_charges">Delivery Charges :</string>
    <string name="offer">Offer :</string>
    <string name="price">Price :</string>
    <string name="price_details">Price Details</string>
    <string name="delivery_expected_on_31st_april">Delivery expected on : 31st April</string>
    <string name="order_placed">Order Placed!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="do_visit_again_n_t_t_t_t_t_t_t_t_t_thave_a_nice_day">Do visit again!\n\t\t\t\t\t\t\t\t\t\tHave a Nice Day :)</string>
    <string name="swipe"><![CDATA[Swipe ->]]></string>
    <string name="welcome_to_the_mr_market">Welcome to the Mr. Market :)</string>
    <string name="specE1">►Apple-designed M1 chip for a giant leap in CPU, GPU, and machine learning performance
►Get more done with up to 20 hours of battery life, the longest ever in a Mac
►8-core GPU with up to 5x faster graphics for graphics-intensive apps and games
►16-core Neural Engine for advanced machine learning</string>
    <string name="details">Details -></string>
    <string name="hello">Hello,</string>
</resources>