<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/order_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/price_details"
        android:textColor="@color/btn_orange"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/btn_orange"
        app:layout_constraintTop_toBottomOf="@id/order_summary"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/price"
        android:textSize="23sp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_summary" />
    <TextView
        android:id="@+id/old_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/old_price"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_summary" />

    <TextView
        android:id="@+id/offer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/offer"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price" />
    <TextView
        android:id="@+id/discount_amt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/discount"
        android:textColor="@color/green"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/old_price" />

    <TextView
        android:id="@+id/delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/delivery_charges"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/offer" />
    <TextView
        android:id="@+id/free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/free"
        android:textColor="@color/green"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/discount_amt" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/total_amount"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delivery" />
    <TextView
        android:id="@+id/total_amt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/new_price"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/free" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@id/confirm_order_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20sp"/>

    <Button
        android:backgroundTint="@color/light_orange"
        android:textColor="@color/btn_orange"
        android:textStyle="bold"
        android:id="@+id/confirm_order_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_order"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="15dp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>