<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        android:id="@+id/card_images_layout"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/card_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/swipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:text="@string/swipe"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_images_layout" />

    <TextView
        android:id="@+id/card_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/card_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_images_layout" />

    <TextView
        android:id="@+id/old_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_price"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@id/card_name"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="8dp" />

    <TextView
        android:id="@+id/new_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_price"
        android:textSize="25sp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/card_name"
        app:layout_constraintStart_toEndOf="@id/old_price"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"/>

    <TextView
        android:id="@+id/discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/discount"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/green"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/new_price"
        app:layout_constraintTop_toBottomOf="@id/card_name" />


    <TextView
        android:id="@+id/card_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="15sp"
        android:text="@string/specifications"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/old_price" />

    <Button
        android:id="@+id/buy_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/buy"
        android:textSize="16sp"
        android:layout_margin="8dp"
        android:padding="10dp"
        android:backgroundTint="@color/light_orange"
        android:textColor="@color/btn_orange"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>