<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/item_cards"
    app:rippleColor="@color/light_orange"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="175dp"
            android:layout_height="200dp"
            android:importantForAccessibility="no"
            android:scaleType="centerInside"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/name"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/item_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_old_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/old_price"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/item_image"
            app:layout_constraintTop_toBottomOf="@id/item_name" />

        <TextView
            android:id="@+id/item_new_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/new_price"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/item_old_price"
            app:layout_constraintTop_toBottomOf="@id/item_name" />

        <TextView
            android:id="@+id/item_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/discount"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/green"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/item_image"
            app:layout_constraintTop_toBottomOf="@id/item_old_price" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:id="@+id/item_details_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="16sp"
            app:cornerRadius="15dp"
            app:strokeColor="@color/green"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="8dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
