<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/hello"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:padding="1dp"
        android:text="@string/welcome_to_the_mr_market"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hello" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/btn_orange"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/selectCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:padding="15dp"
        android:text="@string/select_a_category"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <!--    <View-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/selectCategory"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/mr_market">-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/electronics_btn"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="19dp"
        android:backgroundTint="@color/light_orange"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:text="@string/electronic_devices"
        android:textAllCaps="false"
        android:textColor="@color/btn_orange"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectCategory" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/wearables_btn"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/light_orange"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:text="@string/wearables"
        android:textAllCaps="false"
        android:textColor="@color/btn_orange"
        android:textSize="19sp"
        android:textStyle="bold"
        app:cornerRadius="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectCategory" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/books_btn"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/light_orange"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:text="@string/books"
        android:textAllCaps="false"
        android:textColor="@color/btn_orange"
        android:textSize="19sp"
        android:textStyle="bold"
        app:cornerRadius="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wearables_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/others_btn"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/light_orange"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:text="@string/others"
        android:textAllCaps="false"
        android:textColor="@color/btn_orange"
        android:textSize="19sp"
        android:textStyle="bold"
        app:cornerRadius="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wearables_btn" />
    <!--    </View>-->

    <ImageView
        android:id="@+id/mr_market"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>