<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:textSize="35sp"
        android:layout_marginTop="35dp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_placed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_placed"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/congrats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="35dp" />

    <ImageView
        android:id="@+id/smiley"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        app:layout_constraintBottom_toTopOf="@+id/visit_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_placed" />

    <TextView
        android:id="@+id/visit_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/do_visit_again_n_t_t_t_t_t_t_t_t_t_thave_a_nice_day"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572" />

    <TextView
        android:id="@+id/delivery_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_expected_on_31st_april"
        android:padding="15dp"
        android:textStyle="italic"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/continue_shopping_btn"
        android:elevation="5dp"
        android:stateListAnimator="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:padding="15dp"
        android:text="Continue Shopping"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/visit_again" />


</androidx.constraintlayout.widget.ConstraintLayout>